# dental_agent_simple

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  __init__.py  appointment_systems.py  audio_recorder.py  clinic_info.py  conversation_handlers.py  conversation_logger.py  dental_clinic_assistant.py  docker-compose.yml  flow_nodes.py  main.py  metrics_observer.py  pyproject.toml  requirements.txt  test_google_calendar.py
.claude/: settings.local.json
conversations/: conversation_20251004_110248_708.txt  conversation_20251004_110459_153.txt  conversation_20251004_135501_467.txt  conversation_20251004_135624_645.txt  conversation_20251004_135704_801.txt
docs/: GOOGLE_CALENDAR_SETUP.md  PROJECT_DEEP_DIVE.md  README_TELEGRAM.md  SYSTEM_ARCHITECTURE.md  TUTORIAL.md  flow_diagram.md  generate_flow_graph.py  new_flows.md  run_refactored.py  simple_flow_graph.py  understanding_the_code.md
